// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeView _updateNotes 1`] = `
Array [
  Object {
    "caption": "Todos",
    "id": 0,
    "type": "todos",
  },
  Object {
    "caption": "Snippets",
    "id": 1,
    "type": "snippets",
  },
  Object {
    "caption": "Notes",
    "id": 2,
    "type": "notes",
  },
]
`;

exports[`TreeView _updateNotes 2`] = `
Array [
  Object {
    "workspaceId": "123",
  },
  Object {
    "workspaceId": "321",
  },
]
`;

exports[`TreeView _updateSnippets 1`] = `
Array [
  Object {
    "caption": "Todos",
    "id": 0,
    "type": "todos",
  },
  Object {
    "caption": "Snippets",
    "id": 1,
    "type": "snippets",
  },
  Object {
    "caption": "Notes",
    "id": 2,
    "type": "notes",
  },
]
`;

exports[`TreeView _updateSnippets 2`] = `
Array [
  Object {
    "workspaceId": "123",
  },
  Object {
    "workspaceId": "321",
  },
]
`;

exports[`TreeView _updateTodos 1`] = `
Array [
  Object {
    "caption": "Todo [global] (0 open / 2 closed)",
    "id": 0,
    "type": "todos",
  },
  Object {
    "caption": "Clipboard",
    "id": 1,
    "type": "snippets",
  },
  Object {
    "caption": "Notes",
    "id": 2,
    "type": "notes",
  },
]
`;

exports[`TreeView _updateTodos 2`] = `
Array [
  Object {
    "workspaceId": "123",
  },
  Object {
    "workspaceId": "321",
  },
]
`;

exports[`TreeView clearTree 1`] = `
Object {
  "notes": Array [],
  "snippets": Array [],
  "todos": Array [],
}
`;

exports[`TreeView getChildren 1`] = `
Array [
  Item {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": "foo",
    "command": undefined,
    "contextValue": "todosHeadline",
    "id": "0",
    "isTreeItem": true,
    "label": "Todos",
    "type": "todos",
  },
  Item {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": "foo",
    "command": undefined,
    "contextValue": "snippetsHeadline",
    "id": "1",
    "isTreeItem": true,
    "label": "Snippets",
    "type": "snippets",
  },
  Item {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": "foo",
    "command": undefined,
    "contextValue": "notesHeadline",
    "id": "2",
    "isTreeItem": true,
    "label": "Notes",
    "type": "notes",
  },
]
`;

exports[`TreeView getChildren 2`] = `
Array [
  TodoItem {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": undefined,
    "command": Object {
      "command": "marquee.todo.addEmpty",
      "title": "Add new todo",
    },
    "contextValue": "AddNew",
    "iconPath": Object {
      "dark": "/foo/bar/assets/add-light.svg",
      "light": "/foo/bar/assets/add-dark.svg",
    },
    "id": "addtodos",
    "isTreeItem": true,
    "item": Object {},
    "label": "Add new todo",
    "type": "AddNew",
  },
]
`;

exports[`TreeView getChildren 3`] = `
Array [
  SnippetItem {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": undefined,
    "command": Object {
      "command": "marquee.snippet.addEmpty",
      "title": "Add New Clipboard",
    },
    "contextValue": "AddNew",
    "empty": true,
    "iconPath": Object {
      "dark": "/foo/bar/assets/add-light.svg",
      "light": "/foo/bar/assets/add-dark.svg",
    },
    "id": "addItemSnippet",
    "isTreeItem": true,
    "item": Object {},
    "label": "Add New Clipboard Item",
    "type": "AddNew",
  },
]
`;

exports[`TreeView getChildren 4`] = `
Array [
  NoteItem {
    "archived": undefined,
    "basePath": "/foo/bar",
    "checked": undefined,
    "collapsibleState": undefined,
    "command": Object {
      "command": "marquee.note.addEmpty",
      "title": "Add new note",
    },
    "contextValue": "AddNew",
    "empty": true,
    "iconPath": Object {
      "dark": "/foo/bar/assets/add-light.svg",
      "light": "/foo/bar/assets/add-dark.svg",
    },
    "id": "addItemNote",
    "isTreeItem": true,
    "item": Object {},
    "label": "Add new note",
    "type": "AddNew",
  },
]
`;
